--- a/index.html
+++ b/index.html
@@ -1,7 +1,19 @@
 <!DOCTYPE html>
-<html>
-  <body>
-    <h1>Hello!</h1>
-    <p>Test</p>
-  </body>
+<html lang="en">
+<head>
+<title>Page Title</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+</style>
+</head>
+<body>
+
+<h1>My Website</h1>
+<p>A website created by me.</p>
+
+</body>
 </html>
